--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -63,10 +63,10 @@
                     </li>
 
                     <li>
-                        <a href="html/constuccion/construccion.html" class="btn btn-hover">
+                        <a href="login.html" class="btn btn-hover">
                             <span>Ingresar</span>
                         </a>
-                        <a href="html/constuccion/construccion.html" class="btn btn-hover">
+                        <a href="login.html" class="btn btn-hover">
                             <span>Registrarse</span>
                         </a>
                     </li>
