Boton agregar pelicula

--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -100,6 +100,10 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <span>Agregar carrito</span>
+                <label for=cantidad></label><textarea id = cantidad></textarea>
+            </div>
         </div>
 
         <!-- Final Pelicula-->
