Cambio en catálogo

--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -101,8 +101,7 @@
                     </div></a>
             </div>
             <div>
-                <span>Agregar carrito</span>
-                <label for=cantidad></label><textarea id = cantidad></textarea>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -117,6 +116,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -129,6 +131,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -143,6 +148,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -155,6 +163,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -169,6 +180,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -181,6 +195,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -195,6 +212,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -207,6 +227,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
