Listo películas de acción

--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -243,7 +243,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
-
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -258,6 +260,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -270,6 +275,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -284,6 +292,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -296,6 +307,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -310,6 +324,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Final Pelicula-->
@@ -322,6 +339,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
