--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -368,6 +368,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -380,6 +383,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -394,6 +400,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -406,6 +415,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -420,6 +432,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -432,6 +447,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -446,6 +464,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -457,6 +478,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -470,6 +494,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
