--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -510,6 +510,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -521,6 +524,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -534,6 +540,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -545,6 +554,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -558,6 +570,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -569,6 +584,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -582,6 +600,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
