--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -628,6 +628,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
         <!-- Fin Pelicula-->
 
@@ -638,6 +641,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
         <!-- Fin Pelicula-->
@@ -650,6 +656,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -664,6 +673,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -676,6 +688,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -690,6 +705,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
         <!-- Fin Pelicula-->
 
@@ -702,6 +720,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -713,6 +734,9 @@
                 <a href="solicitudes.jsp?nombre=Safe haven&precio=3000"><div class="image__overlay">
                     <p class="image__description">Comprar<br>o<br>Rentar</p>
                 </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -727,6 +751,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -739,6 +766,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -753,6 +783,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -764,6 +797,9 @@
                 <a href="solicitudes.jsp?nombre=If i stay&precio=3000"><div class="image__overlay">
                     <p class="image__description">Comprar<br>o<br>Rentar</p>
                 </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -778,6 +814,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -790,6 +829,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
         </div>
 
@@ -804,6 +846,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+            </div>
         </div>
 
         <!-- Fin Pelicula-->
@@ -815,6 +860,10 @@
                 <a href="solicitudes.jsp?nombre=Harry and meghan&precio=3000"><div class="image__overlay">
                     <p class="image__description">Comprar<br>o<br>Rentar</p>
                 </div></a>
+
+            </div>
+            <div>
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
 
             <!-- Fin Pelicula-->
