--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -100,6 +100,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div class="box">
+                <input type="number" class="form-control" >
+            </div>
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -115,6 +118,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div class="box">
+                <input type="number" class="form-control"  >
             </div>
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
@@ -132,8 +138,11 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div class="box">
+                <input type="number" class="form-control"  >
+            </div>
             <div>
-                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
+                <input type="submit" class="btn btn-primary" name="accion" value="Agregar" min="1" max="30" >
             </div>
         </div>
 
@@ -147,6 +156,9 @@
                     <div class="image__overlay">
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
+            </div>
+            <div class="box">
+                <input type="number" class="form-control"  >
             </div>
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
@@ -164,6 +176,9 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <div class="box">
+                <input type="number" class="form-control"  >
+            </div>
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -180,6 +195,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -196,6 +212,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -212,6 +229,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -228,6 +246,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -244,6 +263,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -260,6 +280,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -276,6 +297,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -292,6 +314,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -308,6 +331,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -324,6 +348,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -340,6 +365,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -368,6 +394,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -384,6 +411,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -400,6 +428,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -416,6 +445,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -432,6 +462,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -448,6 +479,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -464,6 +496,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -479,6 +512,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -495,6 +529,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -510,6 +545,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -525,6 +561,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -540,6 +577,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -555,6 +593,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -570,6 +609,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -585,6 +625,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -601,6 +642,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -628,6 +670,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -642,6 +685,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -657,6 +701,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -673,6 +718,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -689,6 +735,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -705,6 +752,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -720,6 +768,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -735,6 +784,7 @@
                     <p class="image__description">Comprar<br>o<br>Rentar</p>
                 </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -751,6 +801,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -767,6 +818,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -783,6 +835,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -814,6 +867,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -830,6 +884,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -846,6 +901,7 @@
                         <p class="image__description">Comprar<br>o<br>Rentar</p>
                     </div></a>
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
@@ -862,6 +918,7 @@
                 </div></a>
 
             </div>
+            <input type="number" class="form-control"  >
             <div>
                 <input type="submit" class="btn btn-primary" name="accion" value="Agregar" >
             </div>
