Carrito de compras

--- a/src/main/webapp/catalogo.html
+++ b/src/main/webapp/catalogo.html
@@ -84,6 +84,8 @@
 
 <!--INICIO-->
 
+<form action="ControladorCarrito?menu=admPeliculas" method="POST">
+
 <!-- movie list start -->
 <div class="movieContainer">
     <div class="section-header">
@@ -930,6 +932,7 @@
         </div>
     </div>
 </div>
+</form>
 <!--FINAL-3-->
 
 <!-- FOOTER SECTION -->
