--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -41,7 +41,7 @@
                 </a>
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="home.html">Inicio</a></li>
-                    <li><a href="catalogo.html">Catálogo</a></li>
+                    <li><a href="ControladorCarrito?menu=admPeliculas&accion=Listar">Catálogo</a></li>
                     <li><a href="#">Acerda de </a>
                         <ul class="submenu">
                             <li><a href="historia.html">Nuestra Historia</a></li>
