css de catalogos y href

--- a/src/main/webapp/catalogoNormal.html
+++ b/src/main/webapp/catalogoNormal.html
@@ -64,7 +64,7 @@
         </li>
 
         <li>
-          <a href="html/constuccion/construccion.html" class="btn btn-hover">
+          <a href="login.html" class="btn btn-hover">
             <span>Ingresar</span>
           </a>
           <a href="html/constuccion/construccion.html" class="btn btn-hover">
@@ -95,16 +95,12 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id ="335983">
           <a href="solicitudes.jsp?nombre=Venom&precio=3000">
             <div class="image__overlay">
               <p class="image__description">Comprar<br>o<br>Rentar</p>
             </div></a>
-        </div>
-        <div>
-          <span>Agregar carrito</span>
-          <label for=cantidad></label><textarea id = cantidad></textarea>
         </div>
       </div>
 
@@ -112,7 +108,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =634649>
           <a href="solicitudes.jsp?nombre=Spiderman&precio=3000">
             <div class="image__overlay">
@@ -125,7 +121,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =272>
           <a href="solicitudes.jsp?nombre=Batman&precio=3000">
             <div class="image__overlay">
@@ -138,7 +134,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =24>
           <a href="solicitudes.jsp?nombre=Kill Bill&precio=3000">
             <div class="image__overlay">
@@ -151,7 +147,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =680>
           <a href="solicitudes.jsp?nombre=Pulp Fiction&precio=3000">
             <div class="image__overlay">
@@ -164,7 +160,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =503736>
           <a href="solicitudes.jsp?nombre=Army of Death&precio=3000">
             <div class="image__overlay">
@@ -177,7 +173,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =603692>
           <a href="solicitudes.jsp?nombre=John Wick&precio=3000">
             <div class="image__overlay">
@@ -190,7 +186,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =218>
           <a href="solicitudes.jsp?nombre=Terminator&precio=3000">
             <div class="image__overlay">
@@ -203,7 +199,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id =438799>
           <a href="solicitudes.jsp?nombre=Overlord&precio=3000">
             <div class="image__overlay">
@@ -216,7 +212,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 7555>
           <a href="solicitudes.jsp?nombre=Rambo&precio=3000">
             <div class="image__overlay">
@@ -230,7 +226,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 24428 >
           <a href="solicitudes.jsp?nombre=Avengers&precio=3000">
             <div class="image__overlay">
@@ -243,7 +239,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 602223>
           <a href="solicitudes.jsp?nombre=The Purge&precio=3000">
             <div class="image__overlay">
@@ -256,7 +252,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 260346>
           <a href="solicitudes.jsp?nombre=Taken&precio=3000">
             <div class="image__overlay">
@@ -269,7 +265,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 180299>
           <a href="solicitudes.jsp?nombre=The Raid&precio=3000">
             <div class="image__overlay">
@@ -282,7 +278,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 9461>
           <a href="solicitudes.jsp?nombre=Enter The Dragon&precio=3000">
             <div class="image__overlay">
@@ -295,7 +291,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 10195>
           <a href="solicitudes.jsp?nombre=Thor&precio=3000">
             <div class="image__overlay">
@@ -320,7 +316,7 @@
     <!-- Inicio Pelicula-->
 
     <div class="movieList">
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 566525>
           <a href="solicitudes.jsp?nombre=Shang-chi&precio=3000">
             <div class="image__overlay">
@@ -333,7 +329,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 370172>
           <a href="solicitudes.jsp?nombre=No time to die&precio=1500">
             <div class="image__overlay">
@@ -346,7 +342,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 580489 >
           <a href="solicitudes.jsp?nombre=Venom 2&precio=1500">
             <div class="image__overlay">
@@ -359,7 +355,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 522402>
           <a href="solicitudes.jsp?nombre=Finch&precio=1500">
             <div class="image__overlay">
@@ -372,7 +368,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 763164>
           <a href="solicitudes.jsp?nombre=Apex&precio=1500">
             <div class="image__overlay">
@@ -385,7 +381,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 885110>
           <a href="solicitudes.jsp?nombre=Amina&precio=1500">
             <div class="image__overlay">
@@ -398,7 +394,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 512195>
           <a href="solicitudes.jsp?nombre=Alerta Roja&precio=1500">
             <div class="image__overlay">
@@ -410,7 +406,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 524434>
           <a href="solicitudes.jsp?nombre=Eternals&precio=1500">
             <div class="image__overlay">
@@ -423,7 +419,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 796499>
           <a href="solicitudes.jsp?nombre=Ejercito de ladrones&precio=1500">
             <div class="image__overlay">
@@ -435,7 +431,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 438631>
           <a href="solicitudes.jsp?nombre=Dune&precio=1500">
             <div class="image__overlay">
@@ -447,7 +443,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 550988>
           <a href="solicitudes.jsp?nombre=Free Guy&precio=1500">
             <div class="image__overlay">
@@ -459,7 +455,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 714968>
           <a href="solicitudes.jsp?nombre=Plan A&precio=1500">
             <div class="image__overlay">
@@ -471,7 +467,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 854442>
           <a href="solicitudes.jsp?nombre=Next-Door Nightmare&precio=1500">
             <div class="image__overlay">
@@ -483,7 +479,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 568620>
           <a href="solicitudes.jsp?nombre=Snake Eyes: El origen&precio=1500">
             <div class="image__overlay">
@@ -495,7 +491,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 635302>
           <a href="solicitudes.jsp?nombre=Kimetsu no Yaiba&precio=1500">
             <div class="image__overlay">
@@ -508,7 +504,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 436969>
           <a href="solicitudes.jsp?nombre=Suicide Squad&precio=1500">
             <div class="image__overlay">
@@ -532,7 +528,7 @@
 
     <!-- Inicio Pelicula-->
     <div class="movieList">
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 296096>
           <a href="solicitudes.jsp?nombre=Me before you&precio=3000">
             <div class="image__overlay">
@@ -543,7 +539,7 @@
       <!-- Fin Pelicula-->
 
       <!-- Inicio Pelicula-->
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 372058>
           <a href="solicitudes.jsp?nombre=Your Name&precio=3000">
             <div class="image__overlay">
@@ -555,7 +551,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 313369>
           <a href="solicitudes.jsp?nombre=La la land&precio=3000">
             <div class="image__overlay">
@@ -568,7 +564,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id= 568160>
           <a href="solicitudes.jsp?nombre=Weathering with you&precio=3000">
             <div class="image__overlay">
@@ -581,7 +577,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 572154>
           <a href="solicitudes.jsp?nombre=Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai&precio=3000">
             <div class="image__overlay">
@@ -594,7 +590,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 744275 >
           <a href="solicitudes.jsp?nombre=After&precio=3000">
             <div class="image__overlay">
@@ -606,7 +602,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 222935>
           <a href="solicitudes.jsp?nombre=The fault in our stars&precio=3000">
             <div class="image__overlay">
@@ -619,7 +615,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 112949>
           <a href="solicitudes.jsp?nombre=Safe haven&precio=3000"><div class="image__overlay">
             <p class="image__description">Comprar<br>o<br>Rentar</p>
@@ -631,7 +627,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 667520>
           <a href="solicitudes.jsp?nombre=A whisker away&precio=3000">
             <div class="image__overlay">
@@ -644,7 +640,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 378064>
           <a href="solicitudes.jsp?nombre=A silent voice&precio=3000">
             <div class="image__overlay">
@@ -657,7 +653,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 4348>
           <a href="solicitudes.jsp?nombre=Pride and prejudice&precio=3000">
             <div class="image__overlay">
@@ -670,7 +666,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 249164>
           <a href="solicitudes.jsp?nombre=If i stay&precio=3000"><div class="image__overlay">
             <p class="image__description">Comprar<br>o<br>Rentar</p>
@@ -682,7 +678,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 504253>
           <a href="solicitudes.jsp?nombre=I want to eat your pancreas&precio=3000">
             <div class="image__overlay">
@@ -695,7 +691,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 652837>
           <a href="solicitudes.jsp?nombre=Josee the Tiger and the Fish&precio=3000">
             <div class="image__overlay">
@@ -708,7 +704,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 702928>
           <a href="solicitudes.jsp?nombre=Remember me&precio=3000">
             <div class="image__overlay">
@@ -721,7 +717,7 @@
 
       <!-- Inicio Pelicula-->
 
-      <div class="movieItem">
+      <div class="movieItemNormal">
         <div class="image" id = 518527>
           <a href="solicitudes.jsp?nombre=Harry and meghan&precio=3000"><div class="image__overlay">
             <p class="image__description">Comprar<br>o<br>Rentar</p>
